Fighting with the devil

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,4 @@
 @import "../components/Count/Count.css";
 @import "../components/Comments/Comments.css";
 @import "../components/Form/Form.css";
+@import "../components/Dashboard/Dashboard.css";
