edit being integrated from local branch to new layout

--- a/src/components/GridLayout/GridLayout.css
+++ b/src/components/GridLayout/GridLayout.css
@@ -7,3 +7,11 @@
     color:#339AF0;
     font-size: 2rem;
 }
+
+.react-grid-item > .react-edit-handle {
+    position: absolute;
+    border: 0;
+    top: 0;
+    font-size: 1.5rem;
+    right: 0;
+}
