--- a/src/components/GridLayout/GridLayout.css
+++ b/src/components/GridLayout/GridLayout.css
@@ -1,11 +1,34 @@
 .react-grid-layout .grid-item {
     border: 1px solid;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     border-radius: 5px;
-    color:#339AF0;
+    color:rgb(125, 127, 129);
     font-size: 2rem;
+}
+.grid-item .page-container{
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+}
+.grid-item iframe {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    -moz-border-radius: 12px;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+    top: 2.2rem;
+    width: 100%;
+    overflow: hidden;
+}
+
+.react-grid-item > .text {
+    position: absolute;
+    border: 0;
+    top: 0;
+    width: 100%;
+    font-size: 1.5rem;
+    left: 10px;
 }
 
 .react-grid-item > .react-edit-handle {
